--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -32,10 +32,14 @@ nav a:hover {
 
 body{
   background-color: #003049;
+  /* max-width: 1440px;
+  margin: auto; */
+  min-width: 1280px;
 }
 
 main{
   min-height: 79vh;
+  
 }
 
 /* Cards */
@@ -154,7 +158,7 @@ button {
   margin: 20px;
   justify-content: center;
 }
-
+d
 
 
 button:active {
@@ -202,3 +206,27 @@ footer {
   color:#EAE2B7;
   display: inline;
 }
+
+/* TEST PAGE */
+
+#test-form {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  text-align: justify;
+  color: #EAE2B7;
+}
+
+#question {
+  color: #FCBF49;
+  text-decoration: underline #F77F00;
+  padding-left: 20px;
+  padding-bottom: 10px;
+  padding-top: 100px;
+}
+
+#submit-btn {
+  margin-top: 40px;
+}
+
