--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,6 @@
+html {
+  padding: 20px;
+}
 nav{
 /*   width: 100px; */
   height: 30px;
@@ -210,23 +213,33 @@ footer {
 /* TEST PAGE */
 
 #test-form {
+  background-color: #FCBF49;
+  line-height: 2;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 20px;
-  display: flex;
-  justify-content: center;
-  text-align: justify;
-  color: #EAE2B7;
+  color: #003049;
+  margin-left: 250px;
+  margin-right: 400px;
+  margin-top: 150px;
+  border-radius: 10px;  
+  padding-left: 90px;
+  
 }
 
+
 #question {
-  color: #FCBF49;
-  text-decoration: underline #F77F00;
+  color: #003049;
+  text-decoration: underline #003049;
   padding-left: 20px;
   padding-bottom: 10px;
-  padding-top: 100px;
+  padding-top: 50px;
 }
 
 #submit-btn {
   margin-top: 40px;
+  box-shadow: -3px 4px 0 #003049;
 }
 
+#test-main {
+  min-height: 65vh;
+}
