--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -243,3 +243,30 @@ footer {
 #test-main {
   min-height: 65vh;
 }
+
+
+/* table */
+
+table {
+  font-family: sans-serif;
+  font-size: 20px;
+  width: fit-content;
+  margin: auto;  
+  margin-top: 50px;
+  background-color: #FCBF49;
+  border-radius: 10px;
+  border: solid; 
+
+  
+}
+
+tr {
+  margin: 5px;
+  border: solid;
+  align-items: center;
+
+}
+
+th { 
+  border: solid 
+}
