--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -265,7 +265,7 @@ table {
   background-color: #FCBF49;
   border-radius: 10px;
   border: solid;
-  display: flex;
+  /* display: flex; */
   justify-content: space-evenly;
   border:solid 1px
   
